Bug 14299 - Memory leak in ldb 2.0 and above handling of ranged indexes
Summary: Memory leak in ldb 2.0 and above handling of ranged indexes
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.11.6
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-26 22:45 UTC by Andrew Bartlett
Modified: 2021-03-22 03:38 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2020-02-26 22:45:17 UTC
ldb 2.0.0 and above (Samba 4.11) introduced with LMDB as feature allowing the search of a range of values.  This is useful in handling the usnChanged <= X query used in GetNCChanges in particular.

There is a small memory leak of the index key each time the query is run.
Comment 1 Andrew Bartlett 2020-02-26 22:49:53 UTC
Mailing list reference: https://lists.samba.org/archive/samba/2020-February/228380.html
Comment 2 Andrew Bartlett 2021-03-22 03:38:44 UTC
Merged into master as 535debb3 for Samba 4.13